Fix zellij icon alignment

--- a/src/assets/styles/base/_layout.scss
+++ b/src/assets/styles/base/_layout.scss
@@ -52,6 +52,11 @@ article .content {
 .zellij, .zellij img {
     width: 300px;
     height: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    @include mq(lg) {
+        margin-left: 0;
+    }
 }
 
 .grid {
